overflow fix

--- a/list-source/list-system.css
+++ b/list-source/list-system.css
@@ -6,6 +6,7 @@ body {
     height: 100vh;
     padding: 0;
     margin: 0;
+    overflow: auto;
 }
 
 #main-window {
@@ -13,6 +14,8 @@ body {
     width: 80%;
     transition: 0.1s ease-in-out;
     min-width: 100px;
+    overflow-y: auto;
+    flex: 1;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
@@ -100,7 +103,7 @@ body {
     width: 100%;
     height: 50px;
     cursor: pointer;
-    overflow: hidden;
+    overflow: visible;
     position: relative;
 }
 
@@ -130,6 +133,20 @@ body {
     transform: scale(4);
     opacity: 0;
   }
+}
+
+.fix {
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.fix div {
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 /* Theme stuff */
